--- a/002_productdata/package.json
+++ b/002_productdata/package.json
@@ -12,7 +12,8 @@
     "@vercel/otel": "^1.8.2",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
