--- a/002_productdata/package.json
+++ b/002_productdata/package.json
@@ -2,8 +2,10 @@
   "name": "002_productdata",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
+    "devwithserver": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
