--- a/002_productdata/package.json
+++ b/002_productdata/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "devwithserver": "node server.js",
+    "devwithserver": "node src/server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
